fix projects flex-wrap

--- a/src/components/Pages/LandingPage/LandingPage.css
+++ b/src/components/Pages/LandingPage/LandingPage.css
@@ -666,6 +666,14 @@ small {
     margin-bottom: 1em;
   }
 
+  .projects-wrapper .col {
+    flex: 1 1 100%;
+    flex-wrap: nowrap;
+    padding-top: 3vh;
+    padding-bottom: 10vh;
+    max-width: 100vw;
+  }
+
   .project-wrapper .col-left {
     padding-top: 0;
     padding-bottom: 1em;
